Fix inline header spacing on mobile

--- a/src/components/header.css
+++ b/src/components/header.css
@@ -23,6 +23,6 @@
 
 @media only screen and (max-width: 600px) {
   .header.inline {
-    margintop: '60px';
+    margin-top: 60px;
   }
 }
